# rustplugtest

./: .bazelrc  .gitignore  .jjconfig.toml  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  Taskfile.yml
.cargo/: config.toml
.github/workflows/: ci.yml
src/: lib.rs
xtask/: BUILD.bazel
