load("@rules_rust//rust:defs.bzl", "rust_binary")
load("@crates//:defs.bzl", "all_crate_deps")

rust_binary(
    name = "xtask",
    srcs = ["src/main.rs"],
    deps = all_crate_deps(
        normal = True,
        package_name = "xtask"
    ),
    edition = "2021",
    visibility = ["//visibility:public"],
)
